Hot fix text align

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body{
   position: absolute;
   font-size: 3rem;
   top: 65%;
+  text-align: center;
 }
 
 * {
